fixtures/frontend/milestone-1/invalid/markup_child_interpolation.aivi
val brokenView =
    <Label>{current}</Label>
